# pastebin

./: .gitignore  Cargo.toml
src/: main.rs
src/files/: mod.rs  random_hash.rs
src/frontend/: index.html
