[package]
name = "axum-pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
tower = "0.4.13"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"]  }
serde_json = "1.0.87"
base64 = "0.20.0"
http = "0.2.8"
rand = "0.8.5"
